# audio_recorder

app/: build.gradle
app/src/androidTest/java/tk/atna/audiorecorder/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioRecorder.cpp  AudioRecorder.h  CMakeLists.txt  jni_bridge.cpp  logging_macros.h
app/src/main/java/tk/atna/audiorecorder/: App.kt
app/src/main/java/tk/atna/audiorecorder/data/datasource/: AudioRecorderDataSource.kt
app/src/main/java/tk/atna/audiorecorder/data/repository/: FileCacheRepositoryImpl.kt  RecordingRepositoryImpl.kt
app/src/main/java/tk/atna/audiorecorder/di/: AppModule.kt
app/src/main/java/tk/atna/audiorecorder/domain/interactor/: RecordsInteractor.kt
app/src/main/java/tk/atna/audiorecorder/domain/model/: Record.kt
app/src/main/java/tk/atna/audiorecorder/domain/repository/: FileCacheRepository.kt  RecordingRepository.kt
app/src/main/java/tk/atna/audiorecorder/presentation/base/: BaseViewModel.kt
app/src/main/java/tk/atna/audiorecorder/presentation/main/: MainActivity.kt  MainFragment.kt  MainViewModel.kt
app/src/main/java/tk/atna/audiorecorder/presentation/main/adapter/: RecordViewHolder.kt  RecordsAdapter.kt
app/src/main/java/tk/atna/audiorecorder/stuff/: FileProvider.kt  IntentFactory.kt  SingleLiveEvent.kt
app/src/main/res/layout/: main_activity.xml  main_fragment.xml  record_item.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: file_provider_paths.xml
app/src/test/java/tk/atna/audiorecorder/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
